--- a/vaadin-grid-column.html
+++ b/vaadin-grid-column.html
@@ -1,60 +1,11 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <dom-module id="vaadin-grid-column">
-  <template>
-    <style>
-      :host {
-        display: none;
-      }
-    </style>
-  </template>
   <script>
     Polymer({
       is: 'vaadin-grid-column',
 
       properties: {
-        headers: {
-          type: Array,
-          notify: true,
-          value: function() {
-            var headerTemplates = Polymer.dom(this).querySelectorAll('template[is=header]');
-            if (headerTemplates) {
-              return headerTemplates.map(function(t) {
-                var colspan = t.hasAttribute('colspan') && parseInt(t.getAttribute('colspan')) || 0;
-
-                if (this.dataHost) {
-                  // set dataHost to the context where template has been defined
-                  t._rootDataHost = this.dataHost._rootDataHost || this.dataHost;
-                }
-
-                return { template: t, colspan: colspan };
-              }.bind(this));
-            } else {
-              return [];
-            }
-          }
-        },
-        footers: {
-          type: Array,
-          notify: true,
-          value: function() {
-            var headerTemplates = Polymer.dom(this).querySelectorAll('template[is=footer]');
-            if (headerTemplates) {
-              return headerTemplates.map(function(t) {
-                var colspan = t.hasAttribute('colspan') && parseInt(t.getAttribute('colspan')) || 0;
-
-                if (this.dataHost) {
-                  // set dataHost to the context where template has been defined
-                  t._rootDataHost = this.dataHost._rootDataHost || this.dataHost;
-                }
-
-                return { template: t, colspan: colspan };
-              }.bind(this));
-            } else {
-              return [];
-            }
-          }
-        },
         instances: {
           type: Array,
           value: function() {
@@ -65,16 +16,25 @@
           type: String,
           value: ''
         },
+        footerTemplate: {
+          type: Object,
+          notify: true,
+          value: function() {
+            return this._findTemplate('footer');
+          }
+        },
+        headerTemplate: {
+          type: Object,
+          notify: true,
+          value: function() {
+            return this._findTemplate('header');
+          }
+        },
         template: {
           type: Object,
           notify: true,
           value: function() {
-            var template = Polymer.dom(this).querySelector('template:not([is=header])');
-            if (this.dataHost) {
-              // set dataHost to the context where template has been defined
-              template._rootDataHost = this.dataHost._rootDataHost || this.dataHost;
-            }
-            return template;
+            return this._findTemplate(null);
           }
         },
         width: {
@@ -85,32 +45,47 @@
         flex: {
           type: Number,
           value: 1
-        },
-
-        /**
-         * Reference to the parent <vaadin-grid> element
-         */
-        grid: Object
+        }
       },
 
-      observers: ['_flexChanged(grid, flex)', '_widthChanged(grid, width)'],
+      observers: ['_flexChanged(flex)',
+                  '_footerTemplateChanged(footerTemplate)',
+                  '_widthChanged(width)',
+                  '_templateChanged(template)',
+                  '_headerTemplateChanged(headerTemplate)'],
 
-      ready: function() {
-        // when using Polymer bindings, default values trickle down using observers.
-        // we're not using bindings between columns and cells so we need to use
-        // and fire notifications manually.
-        this.fire('headers-changed', {value: this.headers});
-        this.fire('footers-changed', {value: this.footers});
+      _findTemplate: function(type) {
+        var template = Polymer.dom(this).children.filter(function(el) {
+          return el.localName === 'template' && el.getAttribute('is') === type;
+        })[0];
+        if(template) {
+          if(this.dataHost) {
+            // set dataHost to the context where template has been defined
+            template._rootDataHost = this.dataHost._rootDataHost || this.dataHost;
+          }
+
+          return template;
+        }
       },
 
-      _flexChanged: function(grid, flex) {
-        var index = grid.columns.indexOf(this);
-        grid.notifyPath('columns.' + index + '.flex', flex);
+      _flexChanged: function(flex) {
+        this.fire('column-changed', {path: 'flex', value: flex});
       },
 
-      _widthChanged: function(grid, width) {
-        var index = grid.columns.indexOf(this);
-        grid.notifyPath('columns.' + index + '.width', width);
+      _footerTemplateChanged: function(template) {
+        this.fire('column-changed', {path: 'footerTemplate', value: template});
+      },
+
+      _headerTemplateChanged: function(template) {
+        this.fire('column-changed', {path: 'headerTemplate', value: template});
+      },
+
+      _templateChanged: function(template) {
+        this.fire('column-changed', {path: 'template', value: template});
+      },
+
+      _widthChanged: function(width) {
+        this.fire('column-changed', {path: 'width', value: width});
       }
     });
   </script>
