--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -50,23 +50,28 @@
       properties: {
         column: Object,
         expanded: Boolean,
+        flex: Number,
+        footerTemplate: Object,
+        headerTemplate: Object,
         instance: Object,
         index: Number,
         item: Object,
         selected: Boolean,
         template: Object,
         target: Object,
+        width: String,
 
         _forwardedParentProps: Object
       },
 
       observers: ['_columnChanged(column)',
-        '_templateChanged(template, target)',
         '_expandedChanged(expanded, instance)',
+        '_flexChanged(flex)',
         '_indexChanged(index, instance)',
         '_itemChanged(item, instance)',
         '_forwardedParentPropsChanged(_forwardedParentProps.*, instance)',
-        '_selectedChanged(selected, instance)'
+        '_selectedChanged(selected, instance)',
+        '_widthChanged(width)'
       ],
 
       created: function() {
@@ -79,16 +84,24 @@
       },
 
       _columnChanged: function(column) {
+        this.flex = column.flex;
         this.template = column.template;
-        this.listen(column, 'template-changed', '_columnTemplateChanged');
+        this.headerTemplate = column.headerTemplate;
+        this.footerTemplate = column.footerTemplate;
+        this.width = column.width;
+        this.listen(column, 'column-changed', '_columnPropChanged');
       },
 
-      _columnTemplateChanged: function(e) {
-        this.template = e.detail.value;
+      _columnPropChanged: function(e) {
+        this[e.detail.path] = e.detail.value;
       },
 
       _expandedChanged: function(expanded, instance) {
         instance.notifyPath('expanded', expanded);
+      },
+
+      _flexChanged: function(flex) {
+        this.style.flexGrow = flex;
       },
 
       _indexChanged: function(index, instance) {
@@ -160,6 +173,7 @@
             }
           });
         }
+
         Polymer.dom(item).appendChild(this.instance.root);
       },
 
@@ -220,32 +234,11 @@
             inst.notifyPath(prop, value);
           });
         }
-      }
-    };
-
-    var vaadinGridRowContainerCellBehavior = {
-      observers: ['_rowIndexChanged(rowIndex, _rowContainerObjects)'],
-
-      properties: {
-        colspan: {
-          type: Number,
-          notify: true
-        },
-        rowIndex: Number,
-        _rowContainerObjects: Array
       },
 
-      _rowContainerObjectsChanged: function(e) {
-        this._rowContainerObjects = e.detail.value;
-      },
-
-      _rowIndexChanged: function(rowIndex, rowContainerObjects) {
-        if (rowContainerObjects[rowIndex]) {
-          this.template = rowContainerObjects[rowIndex].template;
-          this.colspan = rowContainerObjects[rowIndex].colspan;
-        }
+      _widthChanged: function(width) {
+        this.style.flexBasis = width;
       }
-
     };
 
     Polymer({
@@ -257,6 +250,8 @@
         Polymer.Templatizer,
         vaadinGridTableCellBehavior
       ],
+
+      observers: ['_templateChanged(template, target)'],
 
       listeners: {
         'click': '_onClick'
@@ -296,15 +291,16 @@
 
       behaviors: [
         Polymer.Templatizer,
-        vaadinGridTableCellBehavior,
-        vaadinGridRowContainerCellBehavior
+        vaadinGridTableCellBehavior
       ],
 
-      _columnChanged: function(column) {
-        this._rowContainerObjects = column.headers;
-        this.listen(column, 'headers-changed', '_rowContainerObjectsChanged');
-      }
+      observers: ['_columnHeaderTemplateChanged(headerTemplate, target)'],
 
+      _columnHeaderTemplateChanged: function(template, target) {
+        if (!this._groupRow || this.column.is === 'vaadin-grid-column-group') {
+          this._templateChanged(template, target);
+        }
+      }
     });
 
     Polymer({
@@ -314,15 +310,16 @@
 
       behaviors: [
         Polymer.Templatizer,
-        vaadinGridTableCellBehavior,
-        vaadinGridRowContainerCellBehavior
+        vaadinGridTableCellBehavior
       ],
 
-      _columnChanged: function(column) {
-        this._rowContainerObjects = column.footers;
-        this.listen(column, 'footers-changed', '_rowContainerObjectsChanged');
-      }
+      observers: ['_columnFooterTemplateChanged(footerTemplate, target)'],
 
+      _columnFooterTemplateChanged: function(template, target) {
+        if (!this._groupRow || this.column.is === 'vaadin-grid-column-group') {
+          this._templateChanged(template, target);
+        }
+      }
     });
   })();
 </script>
