--- a/vaadin-grid.html
+++ b/vaadin-grid.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="vaadin-grid-table.html">
 <link rel="import" href="vaadin-grid-column.html">
+<link rel="import" href="vaadin-grid-column-group.html">
 <link rel="import" href="vaadin-grid-row-details-behavior.html">
 <link rel="import" href="vaadin-grid-data-source-behavior.html">
 <link rel="import" href="vaadin-grid-selection-behavior.html">
@@ -37,7 +38,8 @@
 
       columns: {
         type: Array,
-        notify: true
+        notify: true,
+        observer: '_columnsChanged'
       },
 
       size: Number,
@@ -62,8 +64,6 @@
       vaadin.elements.grid.SelectionBehavior
     ],
 
-    observers: ['_columnsChanged(columns.*)'],
-
     _updateItem: function(row, item) {
       row.style.minHeight = item ? '' : this.$.scroller._physicalAverage + 'px';
       row.item = item;
@@ -80,21 +80,33 @@
     },
 
     ready: function() {
-      this.columns = Polymer.dom(this).querySelectorAll('vaadin-grid-column');
+      this.columns = Polymer.dom(this).children.filter(function(el) {
+        return el.localName.indexOf('vaadin-grid-column') === 0;
+      });
       this.rowDetailsTemplate = Polymer.dom(this).querySelector('template[is=row-details]');
     },
 
-    _columnsChanged: function(e) {
-      if (e.path === 'columns') { //new array is set
-        e.value.forEach(function(col) {
-          col.grid = this;
-        }.bind(this));
-      } else if (e.path === 'columns.splices' || //array is spliced
-        (e.path.indexOf('columns.#') === 0 && e.path.split('.').length === 2)) { //column is replaced with set
-        // TODO: implement splice support that will add and remove only affected cells.
-        // meanwhile, deal with splices as the whole array would change.
-        this.columns = this.columns.slice(0);
+    _columnPropChanged: function(e) {
+      // When child columns of a group change, reset columns.
+      if (e.detail.path === 'childColumns') {
+        this.columns = Polymer.dom(this).children.filter(function(el) {
+          return el.localName.indexOf('vaadin-grid-column') === 0;
+        });
       }
+    },
+
+    _columnsChanged: function(columns, oldColumns) {
+      if (oldColumns) {
+        oldColumns.forEach(function(col) {
+          this.unlisten(col, 'column-changed', '_columnPropChanged');
+        }.bind(this));
+      }
+
+      columns.forEach(function(col) {
+        // TODO: not sure why, but seems like 'column-changed' event doesn't bubble
+        // properly from columns to grid so adding listeners to each column instead.
+        this.listen(col, 'column-changed', '_columnPropChanged');
+      }.bind(this));
     }
   });
 </script>
