Implement frozen attribute and remove frozen-column

--- a/demo/grp.html
+++ b/demo/grp.html
@@ -55,7 +55,7 @@
               </template>
             </vaadin-grid-column>
 
-            <vaadin-grid-column class="C2">
+            <vaadin-grid-column class="C2" frozen>
               <template>
                 <paper-input value="{{item.name}}"></paper-input>
               </template>
