--- a/vaadin-grid-data-source-behavior.html
+++ b/vaadin-grid-data-source-behavior.html
@@ -212,7 +212,10 @@
         // make sure same page isn't requested multiple times.
         if (!this._pendingRequests[page] && this.dataSource) {
           this._pendingRequests[page] = true;
-          var opts = {page: page, pageSize: this.pageSize, sortOrder: this._sorters}; //TODO: Should we map the this._sorters elements into objects?
+          var sortOrder = this._sorters.map(function(sorter) {
+            return {path: sorter.path, direction: sorter.direction};
+          });
+          var opts = {page: page, pageSize: this.pageSize, sortOrder: sortOrder};
           this.dataSource(opts, function(items) {
             this._cache[page] = items;
             delete this._pendingRequests[page];
