--- a/vaadin-grid-table-cell.html
+++ b/vaadin-grid-table-cell.html
@@ -46,6 +46,43 @@
 
 <script>
   (function() {
+    window.vaadin = window.vaadin || {};
+    vaadin.elements = vaadin.elements || {};
+    vaadin.elements.grid = vaadin.elements.grid || {};
+
+    vaadin.elements.grid.NonFocusableClickBehavior = {
+
+      listeners: {
+        'click': '_onClick'
+      },
+
+      // we need to listen to click instead of tap because on mobile safari, the
+      // document.activeElement has not been updated (focus has not been shifted)
+      // yet at the point when tap event is being executed.
+      _onClick: function(e) {
+        // Prevent item action if cell itself is not focused.
+        if (!this._isFocusable(Polymer.dom(e).localTarget)) {
+          if (this._nonFocusableClick) {
+            this._nonFocusableClick(e);
+          }
+        }
+      },
+
+      _isFocusable: function(target) {
+        if (Polymer.Settings.useNativeShadow) {
+          // https://nemisj.com/focusable/
+          // tabIndex is not reliable in IE.
+          return target.tabIndex >= 0;
+        } else {
+          // unreliable with Shadow, document.activeElement doesn't go inside
+          // the shadow root.
+          // Also, atleast iOS doesn't seem to focus links or buttons.
+          var focusableElements = ['A', 'BUTTON'];
+          return target.contains(Polymer.dom(document.activeElement).node) || focusableElements.indexOf(target.tagName) > -1;
+        }
+      }
+    };
+
     var vaadinGridTableCellBehavior = {
       properties: {
         column: Object,
@@ -68,36 +105,6 @@
         '_forwardedParentPropsChanged(_forwardedParentProps.*, instance)',
         '_selectedChanged(selected, instance)'
       ],
-
-      listeners: {
-        'click': '_onClick'
-      },
-
-      // we need to listen to click instead of tap because on mobile safari, the
-      // document.activeElement has not been updated (focus has not been shifted)
-      // yet at the point when tap event is being executed.
-      _onClick: function(e) {
-        // Prevent item action if cell itself is not focused.
-        if (!this._isFocusable(Polymer.dom(e).localTarget)) {
-          this.fire('cell-click', {
-            model: this.instance
-          });
-        }
-      },
-
-      _isFocusable: function(target) {
-        if (Polymer.Settings.useNativeShadow) {
-          // https://nemisj.com/focusable/
-          // tabIndex is not reliable in IE.
-          return target.tabIndex >= 0;
-        } else {
-          // unreliable with Shadow, document.activeElement doesn't go inside
-          // the shadow root.
-          // Also, atleast iOS doesn't seem to focus links or buttons.
-          var focusableElements = ['A', 'BUTTON'];
-          return target.contains(Polymer.dom(document.activeElement).node) || focusableElements.indexOf(target.tagName) > -1;
-        }
-      },
 
       created: function() {
         this._instanceProps = {
@@ -285,13 +292,15 @@
 
       behaviors: [
         Polymer.Templatizer,
-        vaadinGridTableCellBehavior
+        vaadinGridTableCellBehavior,
+        vaadin.elements.grid.NonFocusableClickBehavior
       ],
 
-
-
-
-
+      _nonFocusableClick: function() {
+        this.fire('cell-click', {
+          model: this.instance
+        });
+      }
 
     });
 
