--- a/vaadin-grid-table.html
+++ b/vaadin-grid-table.html
@@ -110,6 +110,10 @@
         /*background-color: lightgrey;*/
       }
 
+      tr.dragging td {
+        border-top: 2px solid red !important;
+      }
+
       tr:not([hidden]) {
         display: flex;
         width: 100%;
